--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -839,3 +839,27 @@ div.big_button {
 .alert_msg {
 	color:#F00;
 }
+
+#loading {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    z-index: 111;
+}
+#loading img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    left: -25px;
+    top: -25px;
+    
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    
+    -webkit-box-shadow: 0px 0px 5px #4d4d4d;
+    -moz-box-shadow: 0px 0px 5px #4d4d4d;
+    box-shadow: 0px 0px 5px #4d4d4d;
+}
