--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -322,6 +322,16 @@ body{
 	overflow:hidden;
 	z-index:3;
 }
+.direct_editor {
+    background: rgba(255,255,255,0);
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 640px;
+    height: 480px;
+    overflow: hidden;
+    z-index: 50;
+}
 .rect {
 	position:absolute;
 	margin:0px;
