--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -333,6 +333,17 @@ body{
     overflow: hidden;
     z-index: 50;
 }
+.script_editor {
+    position: relative;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    color: #000000;
+    text-align: left;
+    font: 12px/16px "Deja Vu Sans Mono", "Droid Sans Mono", MONACO, "Courier New";
+}
 .rect {
 	position:absolute;
 	margin:0px;
