--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -337,8 +337,8 @@ body{
     position: relative;
     left: 0px;
     top: 0px;
-    width: 100%;
-    height: 100%;
+    width: 600px;
+    height: 440px;
     padding: 20px;
     color: #000000;
     text-align: left;
@@ -623,7 +623,7 @@ body{
 	box-shadow: 0px 0px 5px #4d4d4d;
 }
 .icon_src img {
-	position:relative;
+	position:absolute;
 	width:40px;
 	height:40px;
 	
@@ -631,10 +631,15 @@ body{
 	-moz-border-radius: 10px;
 	border-radius: 10px;
 }
+.icon_src img.srcicon_back {
+    opacity: 0.6;
+}
 .icon_src p {
+    position: absolute;
 	font-size:10px;
 	height:12px;
 	line-height:12px;
+	font: bold 8px Times;
 }
 .del_container {
 	position:absolute;
