--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -933,3 +933,19 @@ div.big_button {
     -moz-box-shadow: 0px 0px 5px #4d4d4d;
     box-shadow: 0px 0px 5px #4d4d4d;
 }
+
+.scriptCounter {
+    border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+    border:1px solid white;
+    background-color: red;
+    padding: 0px 3px 0px 3px;
+    color: white;
+    float: left;
+    font-size: 9px;
+    font-family: Helvetica, Arial, Sans-Serif;
+    font-weight: bold;
+    position: absolute;
+    right: -3px;
+}
