--- a/projects/support/main.css
+++ b/projects/support/main.css
@@ -1,12 +1,75 @@
-#game {
-    position: fixed;
-    display: block;
+body {
+    position: absolute;
+}
+
+#root {
+    position: absolute;
+    padding: 0px;
+    margin: 0px;
+    float: none;
+}
+
+.bookroot {
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    z-index: 10;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+.game {
+    position: absolute;
+    display: none;
+    opacity: 0;
     z-index: 0;
     -moz-box-shadow: 0 0 10px #000000;
     -webkit-box-shadow: 0 0 10px #000000;
     box-shadow: 0 0 10px #000000;
     border: 3px solid #4c4c4c;
-    margin: auto;
+    margin: 0px auto;
     padding: 0;
     overflow: hidden;
+    top: 100%;
+    
+    -webkit-transition: opacity 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out;
+    -o-transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
+}
+.game_active {
+    display: block;
+    opacity: 1;
+    z-index: 15;
+}
+
+.video {
+    position: absolute;
+    display: none;
+    opacity: 0;
+    z-index: 0;
+    width: 80%;
+    height: 80%;
+    top: 100%;
+    padding: 0px;
+    margin: 0px auto;
+    
+    -webkit-transition: opacity 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out;
+    -o-transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
+}
+.video_active {
+    top: 10%;
+    display: block;
+    opacity: 1;
+    z-index: 14;
+}
+
+#menu {
+    position: fixed;
+    display: block;
+    z-index: 12;
 }
