--- a/projects/support/main.css
+++ b/projects/support/main.css
@@ -126,6 +126,7 @@ body {
 #menu ul li {
     position: relative;
     padding: 10px 4px 0px 4px;
+    list-style: none;
 }
 
 #center {
@@ -192,6 +193,22 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+#comment .header #photo {
+    position: absolute;
+    left: 30px;
+    top: 0px;
+    margin: 5px 0px;
+    width: 40px;
+    height: 40px;
+}
+#comment .header #camera {
+    position: absolute;
+    left: 90px;
+    top: 0px;
+    margin: 5px 0px;
+    width: 40px;
+    height: 40px;
 }
 #comment .header #sns {
     position: absolute;
