--- a/projects/support/main.css
+++ b/projects/support/main.css
@@ -169,6 +169,7 @@ body {
     /*background: transparent url('../UI/texture.jpg') repeat center center;*/
     background: #FDD283;
     opacity: 0;
+    visibility: hidden;
     
     -moz-box-shadow: 0px 0px 5px 2px #becacf;
     -webkit-box-shadow: 0px 0px 5px 2px #becacf;
@@ -188,6 +189,7 @@ body {
     transition: all 0.5s;
 }
 #comment.show {
+    visibility: visible;
     opacity: 1;
 }
 .close {
@@ -395,4 +397,7 @@ body {
 }
 #msgCenter ul li.fadeIn{
     opacity: 1;
+}
+#msgCenter ul li>p{
+    margin: 0;
 }
