Circle menu test & Interface runner(intermediaire)
In addition
- Make the jasmine reporter visible even if it's longer than the page
default height
- Show source infos in add/modifyScriptDialog

--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -900,6 +900,10 @@ body{
 	float:left;
 	color:#888;
 }
+.popup_body cite{
+	line-height:20px;
+	float:left;
+}
 .popup_buttons {
 	position:absolute;
 	right:50px;
