--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -904,6 +904,15 @@ body{
 	line-height:20px;
 	float:left;
 }
+.popup_body #dialog_lines {
+    width: 100%;
+    height: 220px;
+    border: 1px solid #333;
+    background: rgba(255,255,255,0.5);
+    float: left;
+    margin: 5px 0px 5px 0px;
+    overflow: auto;
+}
 .popup_buttons {
 	position:absolute;
 	right:50px;
@@ -1157,7 +1166,7 @@ div#language_list #current_lang{
 #msgCenter{
     position: absolute;
     width: 100%;
-    z-index: 20;
+    z-index: 120;
 }
 #msgCenter ul{
     margin: 0 auto;
