--- a/stylesheets/interface.css
+++ b/stylesheets/interface.css
@@ -1206,6 +1206,7 @@ div#language_list #current_lang{
     box-shadow: 0px 0px 20px black;
 }
 #msgCenterStatic.moving{ opacity: 0.5; }
+#msgCenterStatic p { margin: 0; }
 #msgCenterStatic h1 {
     margin: 0;
     font-size: 20px;
@@ -1214,13 +1215,13 @@ div#language_list #current_lang{
 #msgCenterStatic h1:hover { cursor: move; }
 
 #msgCenterStatic ul {
-margin: 8px 0 2px;
-padding: 0 5px;
+    margin: 8px 0 2px;
+    padding: 0 5px;
 }
 #msgCenterStatic ul li {
- list-style: none;
-border-top: dashed 1px #686868;
-padding: 2px 10px;
+     list-style: none;
+    border-top: dashed 1px #686868;
+    padding: 2px 10px;
 }
 
 
