--- a/projects/support/main.css
+++ b/projects/support/main.css
@@ -150,6 +150,10 @@ body {
     padding: 10px 4px 0px 4px;
     list-style: none;
 }
+#menu ul li img {
+    width: 32px;
+    height: 30px;
+}
 
 #center {
     position: absolute;
@@ -157,7 +161,7 @@ body {
     top: 50%;
     width: 0px;
     height: 0px;
-    z-index: 13;
+    z-index: 20;
 }
 #comment {
     position: absolute;
@@ -696,8 +700,75 @@ img#newComment.run{
     opacity: 1;
 }
 
-#comment_shower {
+#preference {
+    position: absolute;
+    margin: 0px;
+    padding: 10px 0px 10px 0px;
+    left: -150px;
+    top: -100px;
+    width: 300px;
+    height: 200px;
+    background: #f5f5f5 url('../UI/preference_back.jpg') no-repeat center center;
+    visibility: hidden;
     
+    -moz-box-shadow: 0px 0px 5px 2px #666;
+    -webkit-box-shadow: 0px 0px 5px 2px #666;
+    box-shadow: 0px 0px 5px 2px #666;
+    
+    -border-radius: 5px;
+    
+    -webkit-transition: visibility 0.5s linear;
+    -moz-transition: visibility 0.5s linear;
+    -ms-transition: visibility 0.5s linear;
+    -o-transition: visibility 0.5s linear;
+    transition: visibility 0.5s linear;
+    
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+#preference.show {
+    visibility: visible;
+}
+.slider {
+    position: absolute;
+    width: 278px;
+    height: 17px;
+}
+.slider .background {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 17px;
+}
+.slider .line {
+    position: absolute;
+    left: 2.5%;
+    top: 7px;
+    width: 0%;
+    height: 3px;
+    background: transparent url('../UI/slider/slider_line.png') no-repeat left top;
+    overflow: hidden;
+}
+.slider .ctrlbtn {
+    position: absolute;
+    left: 0%;
+    top: 0px;
+    width: 19px;
+    height: 36px;
+    background: transparent url('../UI/slider/slider_btn.png') no-repeat left top;
+}
+
+#preference p {
+    float: left;
+    position: relative;
+    margin: 10px 5% 0px 5%;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
 }
 
 #imgShower {
